Updated blocks mod to 1.21.3